--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ body{
     width: 100vw;
     height: 100vh;
 }
+input{
+    border-radius: 10px;
+    color:hsl(0, 100%, 74%) ;
+    border-color:hsl(0, 87%, 51%) ;
+}
+::placeholder{
+    color:hsl(0, 100%, 74%) ;
+}
 .first{width: 250px;
 color: white;
 position: relative;
@@ -69,9 +77,13 @@ font-weight: bold;
 }
 .six{text-align: center;
     color: hsl(246, 25%, 77%);
-    font-size: 10px;
-    font-weight: 100;
+    font-size: 12px;
+    font-weight: 400;
     line-height: 200%;
+}
+a{
+    text-decoration: none;
+    color: red;
 }
 
 @media screen and (min-width: 768px) {
